- remove depth indicators as not needed now that comments layers are clearly defined - new comment classes .downvoted and .revealed to have more precise CSS selectors - hide the voting block from comments when collapsed as the block is too narrow, it breaks the layout. It does not make sense to vote/downvote without reading a comment anyway. - tweaked and added more precise CSS selectors (for precedence) to fix the border issues with children comments of downvoted comments

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -173,7 +173,7 @@
         }
     }
 }
-.downvoted {
+.downvoted .downvoted {
     opacity: 0.5;
     -webkit-filter: grayscale(1); // image
     filter: gray; // image grayscale
